[gd_scene load_steps=13 format=3 uid="uid://docq6bsovqcka"]

[ext_resource type="Script" path="res://scenes/card_flip_scene_head.gd" id="1_xdd6x"]
[ext_resource type="Texture2D" uid="uid://3sna3fk7yol1" path="res://sprites/ui/background.png" id="2_sawi2"]
[ext_resource type="Texture2D" uid="uid://wqttrhq6bxvx" path="res://sprites/ui/reroll_games.png" id="3_6xsgf"]
[ext_resource type="Texture2D" uid="uid://1g5i4wf10weh" path="res://sprites/ui/roll_d6.png" id="4_u0yvp"]
[ext_resource type="Texture2D" uid="uid://bo8rcl8aioh66" path="res://sprites/ui/exit.png" id="5_dspia"]
[ext_resource type="Texture2D" uid="uid://da0ppksy74oar" path="res://sprites/ui/settings.png" id="6_gtxyj"]
[ext_resource type="Texture2D" uid="uid://51ccwk6kn3qc" path="res://sprites/ui/back_button.png" id="7_hgixu"]
[ext_resource type="FontFile" uid="uid://oalfutm1mv07" path="res://fonts/FiraSans-Bold.ttf" id="8_8sx2n"]
[ext_resource type="PackedScene" uid="uid://clcp7vjkje3y0" path="res://deck/deck.tscn" id="9_g83s2"]
[ext_resource type="Texture2D" uid="uid://cvwcodvwtg2vn" path="res://sprites/ui/d6.png" id="10_nu4ll"]
[ext_resource type="AudioStream" uid="uid://crwtutceuuea5" path="res://sounds/lofi.wav" id="11_b3lju"]
[ext_resource type="AudioStream" uid="uid://dauc6vp5cniy1" path="res://sounds/dice-roll.wav" id="12_ra5x1"]

[node name="card_flip_scene_head" type="Node2D"]
script = ExtResource("1_xdd6x")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_sawi2")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
clip_contents = true
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1080.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 16

[node name="TopRow" type="GridContainer" parent="Background/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="Back Button" type="Button" parent="Background/MarginContainer/GridContainer/TopRow"]
layout_mode = 2
icon = ExtResource("7_hgixu")
flat = true

[node name="RunTitle" type="RichTextLabel" parent="Background/MarginContainer/GridContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/normal_font = ExtResource("8_8sx2n")
theme_override_fonts/bold_font = ExtResource("8_8sx2n")
theme_override_font_sizes/normal_font_size = 69
bbcode_enabled = true
text = "[center]PYRAMID OF DEFAULT OPTIONS[/center]"
fit_content = true
scroll_active = false

[node name="Options Button" type="Button" parent="Background/MarginContainer/GridContainer/TopRow"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
icon = ExtResource("6_gtxyj")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Quit Button" type="Button" parent="Background/MarginContainer/GridContainer/TopRow"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
icon = ExtResource("5_dspia")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CardRow" type="GridContainer" parent="Background/MarginContainer/GridContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Deck" parent="Background/MarginContainer/GridContainer/CardRow" instance=ExtResource("9_g83s2")]
z_index = 1
layout_mode = 2

[node name="Deck2" parent="Background/MarginContainer/GridContainer/CardRow" instance=ExtResource("9_g83s2")]
z_index = 1
layout_mode = 2

[node name="Deck3" parent="Background/MarginContainer/GridContainer/CardRow" instance=ExtResource("9_g83s2")]
z_index = 1
layout_mode = 2

[node name="BottomRow" type="GridContainer" parent="Background/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/h_separation = 498
columns = 2

[node name="DiceBox" type="GridContainer" parent="Background/MarginContainer/GridContainer/BottomRow"]
layout_mode = 2
theme_override_constants/h_separation = 8
columns = 2

[node name="Roll Dice Button" type="Button" parent="Background/MarginContainer/GridContainer/BottomRow/DiceBox"]
layout_mode = 2
icon = ExtResource("4_u0yvp")
flat = true

[node name="D6" type="TextureRect" parent="Background/MarginContainer/GridContainer/BottomRow/DiceBox"]
visible = false
layout_mode = 2
texture = ExtResource("10_nu4ll")

[node name="Reroll Button" type="Button" parent="Background/MarginContainer/GridContainer/BottomRow"]
layout_mode = 2
icon = ExtResource("3_6xsgf")
flat = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_b3lju")

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_ra5x1")

[connection signal="pressed" from="Background/MarginContainer/GridContainer/TopRow/Back Button" to="." method="_on_back_button_click"]
[connection signal="pressed" from="Background/MarginContainer/GridContainer/TopRow/Options Button" to="." method="_on_options_button_click"]
[connection signal="pressed" from="Background/MarginContainer/GridContainer/TopRow/Quit Button" to="." method="_on_exit_button_click"]
[connection signal="pressed" from="Background/MarginContainer/GridContainer/BottomRow/DiceBox/Roll Dice Button" to="." method="_on_roll_dice_button_pressed"]
[connection signal="pressed" from="Background/MarginContainer/GridContainer/BottomRow/Reroll Button" to="." method="generate_draft"]
